<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome2">

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="235dp"
        android:layout_height="25dp"
        android:text="@string/welcome_company1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="235dp"
        android:layout_height="25dp"
        android:text="@string/welcome_company2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/welcome3"
        android:layout_width="235dp"
        android:layout_height="25dp"
        android:text="@string/welcome_company3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

    <Button
        android:id="@+id/Go_it1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/Go_it1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome3"
        android:onClick="emp_welcome"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="#40a9c7"
        />

</androidx.constraintlayout.widget.ConstraintLayout>