<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome3">

    <TextView
        android:id="@+id/welcome1"
        android:layout_width="235dp"
        android:layout_height="25dp"
        android:text="@string/welcome_employee1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="235dp"
        android:layout_height="25dp"
        android:text="@string/welcome_employee2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome1"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/welcome3"
        android:layout_width="235dp"
        android:layout_height="25dp"
        android:text="@string/welcome_employee3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome2"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/Go_it2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome3"
        app:layout_constraintVertical_bias="0.404"
        android:onClick="main_Start"
        android:backgroundTint="#40a9c7"
        android:textColor="@color/white"

        />

</androidx.constraintlayout.widget.ConstraintLayout>